# fastapi-aync-sqlalchemy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  logger.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pull_request.yml
app/: crud.py  db.py  deps.py  logging.py  main.py  middlewares.py  models.py  schemas.py
app/adapters/inbound/restapi/: dependencies.py  exceptions.py  logging.py  main.py  middlewares.py
app/adapters/inbound/restapi/items/: models.py  routes.py
app/adapters/inbound/restapi/shared/: models.py
app/adapters/inbound/restapi/users/: exceptions.py  models.py  routes.py
app/adapters/outbound/repositories/: item_repository.py  models.py  user_repository.py
app/domain/models/: item.py  user.py
app/domain/ports/: exceptions.py  item_repository.py  user_repository.py
app/domain/services/: item_service.py  user_service.py
tests/: conftest.py
tests/e2e/: test_api_user_scenario.py
tests/unit/adapters/inbound/restapi/users/: test_routes.py
tests/unit/adapters/outbound/repositories/: test_user_repository.py
tests/unit/domain/services/: test_user_service.py
